Fix alignment on Hall slide

--- a/app/styles/_slides.scss
+++ b/app/styles/_slides.scss
@@ -420,11 +420,15 @@ a {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   figure {
     margin-bottom: 3rem;
+
+    @include media('>=xga') {
+      width: 50%;
+    }
   }
 
   img {
